build-type:		Simple
cabal-version:		>= 1.6

name:			mypage
version:		0.0.1

executable		mypage
    main-is:		myblog.hs
    other-modules:	MakeHtml, MyblogParser, MyblogParserPappy, Parse, Pos,
        Processing, ReadConfig, ReadConfigPappy, XMLFile
    build-depends:	base > 3 && < 5, yjftp-libs, process, uuid, HaXml
